--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 
 title: Joriah Lasater
-description: A Short description about my site's purpose
+description: I specialize in iOS Development & App Design
 show_downloads: false
